<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ans">Ans:</string>
    <string name="delete">delete</string>
    <string name="delete_n"><![CDATA[delete\n<--]]></string>
    <string name="_45">-</string>
    <string name="_43">+</string>
    <string name="_42">*</string>
    <string name="ce">CE</string>
    <string name="_0">0</string>
    <string name="_61">=</string>
    <string name="_247">\\</string>
    <string name="_427">\\</string>
    <string name="_183">.</string>
    <string name="_40">(</string>
    <string name="_41">)</string>
</resources>
